fixed pixel not centered

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -79,7 +79,6 @@ nav {
   flex-flow: row;
   flex-wrap: wrap;
   display: flex;
-  align-items: stretch;
   height: 100%;
 }
 
